--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "chakra-sdk"
 version = "0.1.0"
-description = "Python SDK for interacting with the Chakra Network API, providing seamless pandas DataFrame integration"
-authors = ["Chakra Network Team"]
+description = "Python SDK for interacting with the Chakra API, providing seamless pandas DataFrame integration"
+authors = ["Chakra Labs Team"]
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/Chakra-Network/chakra-sdk"
@@ -22,13 +22,12 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.8"
-pandas = [
-    {version = "^1.5.3", python = ">=3.8,<3.9"},
-    {version = "^2.2.3", python = ">=3.9"}
-]
+python = ">=3.9,<3.13"
+pandas = "^2.2.3"
 requests = "^2.32.3"
 python-dotenv = "^1.0.1"
+numpy = "^1.26.0"
+pyarrow = ">=14.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.4"
