--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "chakra-sdk"
+name = "chakra-py"
 version = "0.1.0"
 description = "Python SDK for interacting with the Chakra API, providing seamless pandas DataFrame integration"
 authors = ["Chakra Labs Team"]
