--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Install dependencies
       run: poetry install
     - name: Run tests with pytest
-      run: poetry run pytest --cov=chakra_sdk --cov-report=xml
+      run: poetry run pytest --cov=chakra_py --cov-report=xml
     # - name: Upload coverage to Codecov
     #   uses: codecov/codecov-action@v3
     #   with:
