--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [tool.poetry]
 name = "chakra-py"
-version = "1.0.0"
+version = "1.0.2"
 description = "Python SDK for interacting with the Chakra API, providing seamless pandas DataFrame integration"
 authors = ["Chakra Labs Team"]
 license = "MIT"
 readme = "README.md"
-repository = "https://github.com/Chakra-Network/chakra-sdk"
+repository = "https://github.com/Chakra-Network/python-sdk"
 keywords = ["chakra", "sdk", "api", "data", "pandas", "dataframe", "database"]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
@@ -28,6 +28,8 @@ requests = "^2.32.3"
 python-dotenv = "^1.0.1"
 numpy = "^1.26.0"
 pyarrow = ">=14.0.1"
+colorama = "^0.4.6"
+tqdm = "^4.66.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.4"
