--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,14 +19,9 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install Poetry
-      uses: snok/install-poetry@v1
+    - name: Install Poetry using get-poetry.py
+      run: curl -sSL https://install.python-poetry.org | python3 -
     - name: Install dependencies
       run: poetry install
     - name: Run tests with pytest
       run: poetry run pytest --cov=chakra_py --cov-report=xml
-    # - name: Upload coverage to Codecov
-    #   uses: codecov/codecov-action@v3
-    #   with:
-    #     file: ./coverage.xml
-    #     fail_ci_if_error: true
